add dse java 11 flags